--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -8,6 +8,7 @@ date-format: long
 abstract: "The surge in auto theft rates across Canada has prompted car owners to become more vigilant regarding their vehicle's security. This paper gives a thorough examination of auto theft occurrences within Canada's capital, Ottawa. Focusing on the years 2018-2022, the paper provides a deep dive into the types of vehicles brands, model, and color targeted and offers insights into the neighborhoods within Ottawa exhibiting elevated rates of auto theft. Additionally, the study assesses factors such as the recovery rate of stolen cars, and provides solutions to improve vehicle security by understanding auto theft dynamics in the region."
 format: pdf
 number-sections: true
+toc: true
 bibliography: references.bib
 ---
 
@@ -20,6 +21,10 @@ library(tidyverse)
 library(janitor)
 library(kableExtra)
 library(maps)
+library(ggmap)
+library(arrow)
+
+auto_Data <- read_parquet(here::here("data/analysis_data/analysis_data.parquet"))
 ```
 
 
@@ -27,69 +32,94 @@ library(maps)
 
 In recent years, there is a significant increase of auto theft rates across various cities in Canada. The country’s capital, Ottawa has reported 221 stolen vehicles cases since January 1, 2024 [@citeCTV]. This escalating trend in auto theft poses a considerable risk to public safety. Although Ottawa police have made efforts to mitigate such reports as well as educate the public, the number of reported cases continues to rise steadily, specifically from the years 2018-2023. However, questions regarding potential patterns in the types of cars targeted and the proportion of vehicles successfully recovered following theft have increased.
 
+[TO BE EDITED]
+
 This paper aims to identify the gravity of auto theft as a pressing concern, particularly in Canada, in the @Introduction. Subsequently, the @Data section focuses on the methodology for data collection and data cleaning. The @Results section delves into a comprehensive analysis of auto theft patterns in Ottawa from the years 2018-2022. Finally, in the @Discussion section, the paper explores potential drivers behind the escalation in auto theft rates, strategies for enhancing vehicle security, and prospective trends in auto theft.
 
 
 
 # Data {#sec-data}
 
-```{r}
-#| include: false
-#| warning: false
-#| message: false
-
-auto_Data <- read.csv(here::here("data/analysis_data/analysis_data.csv"))
-
-```
-
-# Model
-
-The goal of our modelling strategy is twofold. Firstly,...
-
-Here we briefly describe the Bayesian analysis model used to investigate... Background details and diagnostics are included in [Appendix -@sec-model-details].
-
-## Model set-up
-
-Define $y_i$ as the number of seconds that the plane remained aloft. Then $\beta_i$ is the wing width and $\gamma_i$ is the wing length, both measured in millimeters.  
-
-\begin{align} 
-y_i|\mu_i, \sigma &\sim \mbox{Normal}(\mu_i, \sigma) \\
-\mu_i &= \alpha + \beta_i + \gamma_i\\
-\alpha &\sim \mbox{Normal}(0, 2.5) \\
-\beta &\sim \mbox{Normal}(0, 2.5) \\
-\gamma &\sim \mbox{Normal}(0, 2.5) \\
-\sigma &\sim \mbox{Exponential}(1)
-\end{align}
-
-We run the model in R [@citeR] using the `rstanarm` package of @rstanarm. We use the default priors from `rstanarm`.
-
-
-### Model justification
-
-We expect a positive relationship between the size of the wings and time spent aloft. In particular...
-
-We can use maths by including latex between dollar signs, for instance $\theta$.
+The data was cleaned by using the open source statistical programming language R [@citeR]...[TO UPDATE]
 
 
 # Results
 
 ```{r}
-#| label: fig-bills
-#| fig-cap: Bills of penguins
+#| label: theft-year
+#| fig-cap: "Average Auto Theft Crime Reported in ottawa from 2018-2023"
 #| echo: false
+#| warning: false
+#| message: false
 
 auto_Data |>
   ggplot(aes(x = theft_year)) +
   geom_histogram(stat = "count")
 ```
+```{r}
+#| label: theft-brand
+#| fig-cap: "Number of Cars Stolen by Car Brand in 2018"
+#| echo: false
+#| warning: false
+#| message: false
+
+brand_theft_2018 <- auto_Data |>
+  filter(theft_year == "2018") 
+
+brand_theft_2018 |>
+  ggplot(aes(x = vehicle_make, fill = vehicle_make)) +
+  geom_histogram(stat = "count")
+
+```
+
+```{r}
+#| echo: false
+#| warning: false
+#| message: false
+
+# creating map from section 5.4.1 in the textbook 
+
+# Define the bounding box for Ottawa
+bbox <- c(left = -75.9, bottom = 45.3, right = -75.5, top = 45.5)
+
+# Get the map of Ottawa using get_stadiamap function
+ottawa_stadia_map <- get_stadiamap(bbox, zoom = 11, maptype = "stamen_toner_lite")
+
+# Plot the map using ggmap
+ggmap(ottawa_stadia_map) # map prints 
+
+# ---- not working -----------
+#filtering dataset to get auto theft reports per neighborhood in 2018
+
+#neighborhood_theft_2018 <- auto_Data |>
+#  filter(theft_year == "2018") |>
+#  select(neighbourhood, x, y)
+
+#print(neighborhood_theft_2018)
+
+# map does not print with elements plotted 
+
+#ggmap(ottawa_stadia_map, extent = "normal", maprange = FALSE) +
+#  geom_point(data = neighborhood_theft_2018,
+#             aes(x = 45.3, y = 45.5, colour = neighbourhood),
+#             alpha = 0.7) +
+#  scale_color_brewer(name = "2019 Division", palette = "Set1") +
+#  labs(x = "Longitude",
+#       y = "Latitude") +
+#  theme_minimal() +
+#  theme(panel.grid.major = element_blank(),
+#        panel.grid.minor = element_blank())
+
+```
+
 
 # Discussion
 
-## First discussion point {#sec-first-point}
+## Possible Reasons for Increasing Auto Theft Rates
 
-## Second discussion point
+## Methods to Increase Vehicle Security 
 
-## Third discussion point
+## Auto Theft Rates Projection 
 
 ## Weaknesses and next steps
 
