--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -249,14 +249,19 @@ brandtheft2023_top10 |>
 #| warning: false
 #| message: false
 
-auto_Data |>
-  ggplot(aes(x = theft_year)) + 
-  labs(x = "Year", y = "Count") + theme_minimal() +
-  geom_histogram(stat = "count")
-
+library(ggplot2)
 
 theft_recovery <- auto_Data |>
-  select(theft_year, recovered)
+  select(theft_year, recovered) 
+
+theft_count <- auto_Data |>
+  select(theft_year) 
+
+theft_count |>
+  ggplot(mapping = aes(x = theft_year)) +
+  geom_bar() +
+  labs(x = "Age group", y = "Number of observations") +
+  theme(legend.position = "bottom")
 
 
 theft_recovery |>
@@ -265,16 +270,12 @@ theft_recovery |>
   labs(x = "Age group", y = "Number of observations", fill = "Vote") +
   theme(legend.position = "bottom")
 
-# Merging 'theft_recovery' dataframe with 'auto_Data'
-merged_data <- merge(auto_Data, theft_recovery, by = "theft_year", all.x = TRUE)
 
-# Plotting the merged data as a line graph
-ggplot(merged_data, aes(x = theft_year, y = recovered)) +
-  geom_line() + 
-  geom_point() +
-  labs(x = "Year", y = "Count") +
-  theme_minimal()
 ```
+
+
+
+
 ```{r}
 #| label: theft-neighborhoods
 #| fig-cap: "Recovery Rates from 2018 - 2023"
@@ -316,32 +317,6 @@ ggplot(years_vehicle, aes(x = vehicle_year, y = n, fill = n)) +
 
 ```
 
-```{r}
-#| label: theft-neighborhoods
-#| fig-cap: "Recovery Rates from 2018 - 2023"
-#| echo: false
-#| warning: false
-#| message: false
-
-theft_recovery <- auto_Data |>
-  select(neighbourhood) |> 
-  count(neighbourhood) 
-
-library(ggplot2)
-
-# Assuming 'years_vehicle' is your data frame
-
-years_vehicle <- theft_recovery |>
-  mutate(vehicle_year = as.numeric(neighbourhood))  # Convert to numeric if 'vehicle_year' is factor
-
-# Create a scatter plot
-ggplot(years_vehicle, aes(x = neighbourhood, y = n, fill = neighbourhood)) +
-  geom_point() +  
-  theme_minimal() + 
-  theme(legend.position = "bottom") + 
-  labs(x = "Vehicle Brand", y = "Count", fill = "Count", title = "Top 10 Brands with Most Auto Thefts in 2022")
-
-```
 
 
 
